Fix layout issue from merge

--- a/assets/css/cover.css
+++ b/assets/css/cover.css
@@ -41,7 +41,7 @@ body, html {height: 100%;
 }
 #radius-cal{
   padding-left: 5px;
-  width:
+ 
  
 }
 
